--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-#**Xiaokang's deep learning note
-## **Tensorflow Learning
-### 1.基本机制
+#Xiaokang's deep learning note
+## Tensorflow Learning
+####### 1.基本机制
   创建执行张量——定义张量间操作——初始化张量——创建会话(session)——执行会话(session）
